# videoSpliter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: FFmpegRunner.cpp  FFmpegRunner.h  MainWindow.cpp  MainWindow.h  SegmentModel.cpp  SegmentModel.h  main.cpp
